--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,12 @@
             <version>3.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.68</version>
+        </dependency>
+
 
     </dependencies>
 
